kubernetes/deploy/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
      release: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        release: home-assistant
    spec:
      automountServiceAccountToken: false
      containers:
      - image: homeassistant/home-assistant:stable
        imagePullPolicy: Always
        name: home-assistant
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        - containerPort: 5683
          name: colot
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant
