kubernetes/deploy/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: home-assistant
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
